--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -4,15 +4,14 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Test"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        
 
-    </application>
+    <activity android:name="StopBookmarks"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+<category android:name="android.intent.category.LAUNCHER"></category>
+</intent-filter>
+</activity>
+</application>
 
 
+<uses-sdk android:minSdkVersion="3"></uses-sdk>
 </manifest> 
