--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,12 +6,15 @@
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         
 
-    <activity android:name="StopBookmarks"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+    <activity android:name="StopBookmarks" android:label="Bookmarks"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
 </intent-filter>
 </activity>
+<activity android:name="BusTimes" android:label="Bus Times"></activity>
 </application>
 
 
 <uses-sdk android:minSdkVersion="3"></uses-sdk>
+
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
