--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.redbus" android:versionCode="1" android:versionName="1.0">
+	package="org.redbus" android:versionName="1.0.2" android:versionCode="3">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 
 
-		<activity android:name="StopBookmarksActivity" android:label="rEdBus">
+		<activity android:name="StopBookmarksActivity" android:label="Edinburgh Bus Tracker">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
 				<category android:name="android.intent.category.LAUNCHER"></category>
