Added "find nearest stop" function.
The GUI for this will change soon.

Bus stop data is contained within a 'stops.dat' resource file


Added GPLv3 notice to Java source files

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="BusTimesActivity" android:label="Bus Times" />
+		<activity android:name="FindNearestStopActivity" android:label="Find nearest stops" />
 	</application>
 
 
