Cosmetic changes - label + button fixes Added 'distance to nearest stop' onto display

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,14 +4,14 @@
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 
 
-		<activity android:name="StopBookmarksActivity" android:label="Edinburgh Bus Tracker">
+		<activity android:name="StopBookmarksActivity" android:label="Bookmarked stops">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
 				<category android:name="android.intent.category.LAUNCHER"></category>
 			</intent-filter>
 		</activity>
 		<activity android:name="BusTimesActivity" android:label="Bus Times" />
-		<activity android:name="FindNearestStopActivity" android:label="Find nearest stops" />
+		<activity android:name="FindNearestStopActivity" android:label="Closest stop" />
 	</application>
 
 
