--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 
 
-		<activity android:name="StopBookmarksActivity" android:label="Bookmarked stops">
+		<activity android:name="StopBookmarksActivity" android:label="Edinburgh bus tracker">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
 				<category android:name="android.intent.category.LAUNCHER"></category>
