--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.redbus" android:versionName="1.0.6" android:versionCode="7">
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	<application android:label="@string/app_name" android:icon="@drawable/icon">
 
 
 		<activity android:name="StopBookmarksActivity" android:label="Edinburgh Bus Tracker">
