--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.redbus" android:versionName="1.0.6" android:versionCode="7">
+	package="org.redbus" android:versionCode="8" android:versionName="1.0.7">
 	<application android:label="@string/app_name" android:icon="@drawable/icon">
 
 
