--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,7 @@
 		<activity android:name="StopMapActivity" android:label="Map" />
 		<uses-library android:name="com.google.android.maps" />
 	<receiver android:name=".TemporalAlarmReceiver"></receiver>
+
 </application>
 
 
@@ -25,4 +26,7 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 
+
+
+<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 </manifest> 
