--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.redbus" android:versionCode="9" android:versionName="1.0.8">
+	package="org.redbus" android:versionName="1.0.9" android:versionCode="10">
 	<application android:label="@string/app_name" android:icon="@drawable/icon">
 
 
