--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.redbus" android:versionName="1.0.26" android:versionCode="27">
+	package="org.redbus" android:versionName="1.0.27" android:versionCode="28">
+	
 	<application android:label="@string/app_name" android:icon="@drawable/icon">
-
-
 		<activity android:name="StopBookmarksActivity" android:label="Edinburgh Bus Tracker">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
@@ -14,20 +13,15 @@
 		<activity android:name="BusTimesActivity" android:label="Bus Times" />
 		<activity android:name="StopMapActivity" android:label="Map" />
 		<uses-library android:name="com.google.android.maps" />
-	<receiver android:name=".TemporalAlarmReceiver"></receiver>
-	<receiver android:name=".ProximityAlarmReceiver"></receiver>
+		<receiver android:name=".TemporalAlarmReceiver"/>
+		<receiver android:name=".ProximityAlarmReceiver"/>
+		<receiver android:name=".AlertNotificationPressedReceiver"/>
+	</application>
 
-<receiver android:name=".AlertNotificationPressedReceiver"></receiver>
-</application>
-
-
-	<uses-sdk android:minSdkVersion="3"></uses-sdk>
-
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-
-
-
-<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
-</manifest> 
+	<uses-sdk android:minSdkVersion="3" />
+	<supports-screens android:smallScreens="true" />
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+</manifest>
