--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	
 	<application android:label="@string/app_name" android:icon="@drawable/icon">
 	    
-		<activity android:name="RedbusTabView" android:label="Edinburgh Bus Tracker">
+		<activity android:name=".ui.RedbusTabView" android:label="Edinburgh Bus Tracker">
 			  <intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
 				<category android:name="android.intent.category.LAUNCHER"></category>
@@ -18,7 +18,7 @@
 			</intent-filter> --> 
 		</activity>
 		
-		<activity android:name="CreateShortcutActivity"
+		<activity android:name=".ui.CreateShortcutActivity"
               android:label="Create shortcut"
               android:theme="@android:style/Theme.Dialog">
         	<intent-filter>
@@ -27,7 +27,7 @@
 		</activity>
         
 		<activity-alias android:name="CreateShortcutActivity"
-			android:targetActivity="CreateShortcutActivity"
+			android:targetActivity=".ui.CreateShortcutActivity"
 			android:label="Edinburgh bus stop">
 			<intent-filter>
 				<action android:name="android.intent.action.CREATE_SHORTCUT" />
