Disable speech feature - workaround to fix
http://code.google.com/p/redbus/issues/detail?id=13

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -76,11 +76,12 @@
 		<!--  Deliberate low priority so never called unless via an app like 'media button router' -->
 		<!--  http://code.google.com/p/media-button-router/ -->
 
-		<receiver android:name=".ui.MediaButtonPressedReceiver">
+		<!-- 
+                <receiver android:name=".ui.MediaButtonPressedReceiver">
 			<intent-filter  android:priority="1">
 				<action android:name="android.intent.action.MEDIA_BUTTON"/>
 			</intent-filter>
-		</receiver>
+		</receiver> -->
 				
 		<activity android:name=".ui.stopmap.StopMapActivity" android:label="Map" />
 		<activity android:name=".ui.BookmarksActivity" android:label="Edinburgh Bus Tracker" />
